--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# NOTE
+# /data/ ==> ignore ALL  data folders
+# /data  ==> ignore ONLY data folder from the root of the project
+
 # History files
 .Rhistory
 .Rapp.history
@@ -30,7 +34,9 @@ vignettes/*.pdf
 
 # knitr and R markdown default cache directories
 *_cache/
+/*_cache/
 /cache/
+/*/*_cache
 
 # Temporary files created by R markdown
 *.utf8.md
@@ -47,3 +53,21 @@ po/*~
 
 # RStudio Connect folder
 rsconnect/
+
+# OS files
+.DS_Store
+
+# quarto site
+/.quarto/
+/docs
+/_site
+/*_freeze/
+/*_files/
+/*/*_files/
+/**/*_files/
+/site_libs
+*.html
+*.tex
+*.log
+*.aux
+*.toc
